--- a/app/templates/admin/bntoida.html
+++ b/app/templates/admin/bntoida.html
@@ -46,7 +46,7 @@
         const formData = new FormData(this);
 
         fetch('', {
-            method: 'POST',
+            method: 'PUT',
             body: formData,
         })
         .then(response => response.json())
