--- a/app/templates/layout/base.html
+++ b/app/templates/layout/base.html
@@ -37,5 +37,7 @@
 {% block footer %}
     {% include 'layout/footer.html'%}
 {% endblock %}
+
+<script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </body>
 </html>
