--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -3,6 +3,12 @@ body {
     color: black;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 .cards-wrapper {
   display: flex;
   justify-content: center;
