--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -129,10 +129,10 @@
                         <div class="form-group mb-4">
                             <label>Đăng nhập với tư cách: </label>
                             <select class="form-select form-inline" aria-label="Default select example" name="role">
-                                <option value="patient" selected="">Admin</option>
-                                <option value="doctor">Bác sĩ</option>
-                                <option value="nurse" selecnted="">Y tá</option>
-                                <option value="cashier">Thu ngân</option>
+                                <option value="ADMIN" selected="">Admin</option>
+                                <option value="BACSI">Bác sĩ</option>
+                                <option value="YTA" selecnted="">Y tá</option>
+                                <option value="THUNGAN">Thu ngân</option>
                             </select>
                         </div>
                         <div class="container">
