--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -60,7 +60,7 @@
                     <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">Về chúng tôi</h5>
                     <h1 class="display-4"><b>Dịch vụ chăm sóc y tế tốt nhất cho bạn và người thân</b></h1>
                 </div>
-                <p>Phòng khám đa khoa Group21 được thành lập năm 2077 với niềm tự hào là một trong những Phòng khám điện
+                <p>Phòng khám đa khoa Miyek được thành lập năm 2024 với niềm tự hào là một trong những Phòng khám điện
                     tử theo tiêu chuẩn quốc tế đầu tiên tại Việt Nam được đầu tư trang thiết bị tiên tiến và hiện đại.
 
                     Với hệ thống quản lý hồ sơ điện tử, khách hàng xem được toàn bộ kết quả khám và xét nghiệm sau 24h
