--- a/app/templates/admin/bntoida.html
+++ b/app/templates/admin/bntoida.html
@@ -2,7 +2,8 @@
 
 {% block body %}
 <div class="d-flex align-items-center justify-content-center vh-100">
-    <div class="text-center">
+    <div class="row">
+        <div class="text-center col-6">
         <p class="h4 m-4"> Số bệnh nhân tối đa trong ngày</p>
         <h1 class="display-1 font-weight-bold m-4">{{sobntoida}}</h1>
         <div class="d-flex justify-content-center m-4">
@@ -11,6 +12,17 @@
                     data-target="#exampleModal"><i class="fa fa-pencil"></i></button>
         </div>
     </div>
+        <div class="text-center col-6">
+        <p class="h4 m-4"> Số bệnh nhân tối đa trong ngày</p>
+        <h1 class="display-1 font-weight-bold m-4">{{sobntoida}}</h1>
+        <div class="d-flex justify-content-center m-4">
+            <button class="d-flex justify-content-center btn btn-secondary thanh-toan-btn"
+                    data-toggle="modal"
+                    data-target="#exampleModal"><i class="fa fa-pencil"></i></button>
+        </div>
+    </div>
+    </div>
+
 </div>
 
 <!-- Modal HTML -->
