--- a/app/templates/examine.html
+++ b/app/templates/examine.html
@@ -119,7 +119,8 @@
                                             {% for ngay, ngay_cu_the in ngayconlai %}
                                             <td>
                                                 <input type="radio" id="thu{{ ngay }}" name="bnngaykham"
-                                                       value="{{ ngay_cu_the }}" onchange="updateDoctorsTable(this)" required>
+                                                       value="{{ ngay_cu_the }}" onchange="updateDoctorsTable()"
+                                                       required {% if loop.first %}checked{% endif %}>
                                             </td>
                                             {% endfor %}
                                         </tr>
@@ -203,8 +204,6 @@
 </div>
 </body>
 
-
-<script !src="">
 
 </script>
 {% endblock %}
