--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -41,7 +41,7 @@
                         <p class="mb-0">Giới tính</p>
                     </div>
                     <div class="col-sm-9">
-                        <p class="text-muted mb-0">Nam</p>
+                        <p class="text-muted mb-0">{{'Nữ' if current_user.gioitinh else 'Nam'}}</p>
                     </div>
                 </div>
                 <hr>
