--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -24,7 +24,7 @@
                     Chào {{ current_user.username }}
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
-                    <li style="right: 0;"><a class="dropdown-item" href="#">Tài khoản</a></li>
+                    <li style="right: 0;"><a class="dropdown-item" href="/admin">Tài khoản</a></li>
                     <li style="right: 0;"><a class="dropdown-item" href="/logout">Đăng xuất</a></li>
                 </ul>
             </li>
