--- a/app/templates/admin/thongke.html
+++ b/app/templates/admin/thongke.html
@@ -6,11 +6,18 @@
 <h3 class="text-info text-center ">THỐNG KÊ DOANH THU THEO THÁNG</h3>
 <div class="border-top border-dark">
     <form>
-        <div class="form-group">
-            <label class="text-info font-weight-bold">Nhập Tháng Cần Thống Kê Doanh Thu</label>
-            <input type="number" min="1" max="12" class="form-control" name="month"/>
+        <div class="row">
+            <div class="form-group col-6">
+                <label class="text-info font-weight-bold">Nhập Năm Cần Thống Kê Doanh Thu</label>
+                <input type="number" min="1" required class="form-control" name="yearstats" value="{{yearstats}}"/>
+            </div>
+            <div class="form-group col-6">
+                <label class="text-info font-weight-bold">Nhập Tháng Cần Thống Kê Doanh Thu</label>
+                <input type="number" min="1" max="12" required class="form-control" name="monthstats"
+                       value="{{monthstats}}"/>
+            </div>
         </div>
-        <input type="submit" value="Tìm Kiếm Theo Tháng" class="btn btn-info"/>
+        <input type="submit" value="Tìm Kiếm " class="btn btn-info"/>
     </form>
 </div>
 <br>
@@ -19,36 +26,42 @@
         <table class="table table-hover table-bordered ">
             <tr>
                 <th>Ngày</th>
-                <th>Số Bệnh Nhân Khám</th>
+                <th>Số Bệnh Nhân</th>
                 <th>Doanh Thu</th>
                 <th>Tỷ Lệ</th>
             </tr>
-            <!--            {% for s in profit_stats %}-->
-            <!--            <tr>-->
-            <!--                <td>{{ s[0] }}</td>-->
-            <!--                <td>{{ s[1] }}</td>-->
-            <!--                <td>-->
-            <!--                    {% if s[2] %}-->
-            <!--                    {{ "{:,.1f}".format(s[2]) }} VND-->
-            <!--                    {% else %}-->
-            <!--                    0 VND-->
-            <!--                    {% endif %}-->
-            <!--                </td>-->
-            <!--                <td> {{ s[3] }}% </td>-->
-            <!--            </tr>-->
-            <!--            {% endfor %}-->
+            {% for s in doanhthu %}
+            <tr>
+                <td>{{ s[0] }}</td>
+                <td>{{ s[1] }}</td>
+                <td>
+                    {% if s[2] %}
+                    {{ "{:,.0f}".format(s[2]) }} VND
+                    {% else %}
+                    0 VND
+                    {% endif %}
+                </td>
+                <td> {{ s[3] }}% </td>
+            </tr>
+            {% endfor %}
         </table>
 
-        <span class="form-control">
-<!--            {%if total_month_profit %}-->
-            <!--                Tổng Doanh Thu:  {{ "{:,.1f}".format(total_month_profit) }} VND-->
-            <!--            {% else %}-->
-            <!--                0 VND-->
-            <!--            {% endif %}-->
-        </span>
+        <!--        <span class="form-control">-->
+        <!--&lt;!&ndash;            {%if total_month_profit %}&ndash;&gt;-->
+        <!--            &lt;!&ndash;                Tổng Doanh Thu:  {{ "{:,.1f}".format(total_month_profit) }} VND&ndash;&gt;-->
+        <!--            &lt;!&ndash;            {% else %}&ndash;&gt;-->
+        <!--            &lt;!&ndash;                0 VND&ndash;&gt;-->
+        <!--            &lt;!&ndash;            {% endif %}&ndash;&gt;-->
+        <!--        </span>-->
+        <div class="form-group">
+            <label class="font-weight-bold text-info">Tổng Doanh Thu:</label>
+            <span class="form-control bg-light">
+                 {{ "{:,.0f}".format(tongdoanhthu) }} VND
+            </span>
+        </div>
     </div>
     <div class="col-md-6 col-xs-12">
-        <canvas id="profitMonthChart"></canvas>
+        <canvas id="DoanhThu"></canvas>
     </div>
 </div>
 
@@ -58,11 +71,17 @@
 <h3 class="text-info text-center ">THỐNG KÊ TẦN SUẤT KHÁM THEO THÁNG</h3>
 <div class="border-top border-dark">
     <form>
-        <div class="form-group">
-            <label class="text-info font-weight-bold">Nhập Tháng Cần Thống Kê Tần Suất Khám</label>
-            <input type="number" min="1" max="12" class="form-control" name="month"/>
+        <div class="row">
+            <div class="form-group col-6">
+                <label class="text-info font-weight-bold">Nhập Năm Cần Thống Kê Tần Suất Khám</label>
+                <input type="number" required class="form-control" name="year" value="{{ year }}"/>
+            </div>
+            <div class="form-group col-6">
+                <label class="text-info font-weight-bold">Nhập Tháng Cần Thống Kê Tần Suất Khám</label>
+                <input type="number" min="1" max="12" required class="form-control" name="month" value="{{ month }}"/>
+            </div>
         </div>
-        <input type="submit" value="Tìm Kiếm Theo Tháng" class="btn btn-info"/>
+        <input type="submit" value="Tìm Kiếm" class="btn btn-info"/>
     </form>
 </div>
 <br>
@@ -92,11 +111,19 @@
 <h3 class="text-info text-center ">THỐNG KÊ SỬ DỤNG THUỐC THEO THÁNG</h3>
 <div class="border-top border-dark">
     <form>
-        <div class="form-group">
-            <label class="text-info font-weight-bold">Nhập Tháng Cần Thống Kê Tuần Suất Sử Dụng Thuốc</label>
-            <input type="number" min="1" max="12" class="form-control" name="monthMedicine"/>
+        <div class="row">
+            <div class="form-group col-6">
+            <label class="text-info font-weight-bold">Nhập Năm Cần Thống Kê Tuần Suất Sử Dụng Thuốc</label>
+            <input type="number"class="form-control" required name="yearMedicine"
+                   value="{{ yearmedicine }}"/>
         </div>
-        <input type="submit" value="Tìm Kiếm Theo Tháng" class="btn btn-info"/>
+            <div class="form-group col-6">
+            <label class="text-info font-weight-bold">Nhập Tháng Cần Thống Kê Tuần Suất Sử Dụng Thuốc</label>
+            <input type="number" min="1" max="12" required class="form-control" name="monthMedicine"
+                   value="{{ monthmedicine }}"/>
+        </div>
+        </div>
+        <input type="submit" value="Tìm Kiếm" class="btn btn-info"/>
 
     </form>
 </div>
@@ -161,6 +188,11 @@
     let data2 = [];
     let labels2 = [];
 
+    let data3 = [];
+    let labels3 = [];
+
+
+
     {% for m in medicine_stats %}
     data.push({{ m[3] }});
     labels.push('{{ m[0] }}')
@@ -170,6 +202,12 @@
     data2.push({{ d[1] }});
     labels2.push('{{ d[0] }}')
     {% endfor %}
+
+    {% for s in doanhthu %}
+    data3.push({{ s[2] }});
+    labels3.push('{{ s[0] }}')
+    {% endfor %}
+
 
 
     function draw(ctx, data, labels){
@@ -213,13 +251,35 @@
         }
       });
     }
+    function draw3(ctx, data, labels){
+        new Chart(ctx, {
+        type: 'bar',
+        data: {
+          labels: labels,
+          datasets: [{label: '# Thống kê doanh thu theo tháng',
+            data: data,
+            borderWidth: 1,
+            backgroundColor: ['red','green','blue','gold','brown']
+          }]
+        },
+        options: {
+          scales: {
+            y: {
+              beginAtZero: true
+            }
+          }
+        }
+      });
+    }
 
     window.onload= function(){
         const ctx = document.getElementById('Tansuatsdthuoc');
         const ctx2 = document.getElementById('TanSuatKham');
+        const ctx3 = document.getElementById('DoanhThu');
 
         draw(ctx, data, labels)
         draw2(ctx2, data2, labels2)
+        draw3(ctx3, data3, labels3)
 
     }
 </script>
